plugins {
    id 'java'
}

group = 'com.kodilla'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/nilestone' }
}

dependencies {

}

tasks.named('test') {
    useJUnitPlatform()
}
test {
// previous JVM options
    jvmArgs("-noverify", "-XX:+EnableDynamicAgentLoading", "-Djdk.instrument.traceUsage") // add this
}
